--- a/mate_workspace/src/vector_drive/package.xml
+++ b/mate_workspace/src/vector_drive/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>simple_package</name>
+  <name>vector_drive</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="jbeta@gmail.com">jbeta</maintainer>
+  <maintainer email="jbeta02@gmail.com">jbeta</maintainer>
   <license>Apache-2.0</license>
 
   <test_depend>ament_copyright</test_depend>
