--- a/mate_workspace/src/simple_package/package.xml
+++ b/mate_workspace/src/simple_package/package.xml
@@ -10,6 +10,7 @@
   <!-- dependencies for publisher_node-->
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>gpiozero</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
