--- a/mate_workspace/src/vector_drive/package.xml
+++ b/mate_workspace/src/vector_drive/package.xml
@@ -10,7 +10,7 @@
   <exec_depend>rclpy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>serial</exec_depend>
-  <exec_depend>time</exec_depend>
+  <exec_depend>gpiozero</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
